Add location to surveys, and partial prize information
